--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     </head>
-
     <body id="page-top">
         <header class="masthead">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0">SassyWooCoo</h1>
-                        <a class="btn btn-primary my-5" href="#projects">Let's go</a>
+                        <button class="btn btn-primary my-5" id="#like">Let's go</button>
                     </div>
                 </div>
             </div>
@@ -30,16 +29,18 @@
         <section class="projects-section bg-dark" id="projects">
             <div class="container px-4 px-lg-5">
                 <!-- Who Am I -->
-                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-4">
+                <div class="gx-0 mb-4 mb-lg-5 align-items-center">
+                    <div >
                         <div class="text-center ">
-                            <p class="display-4">Who am I?</p>
+                            <p class="display-4 ">Who am I</p><hr>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class=" ">
-                            <p class="lead mb-0 featured-text">Oh I'm just the IT guy. From graphics design to digital forensics. I'm very nerdy when it comes to technology.<br>My skills includes but ar not limited to:</p>
-                            <ul class="lead featured-text">
+                    <div >
+                        <div>
+                            <p class="lead mb-0">Oh I'm just the IT guy. From graphics design to digital forensics. I'm very nerdy when it comes to technology.</p>
+                        <p class="display-4 text-center mt-4">My Skills</p><hr>
+                        <div class="row">
+                            <ul class="col lead">
                               <li>Development and programming</li>
                               <li>Photoshop and graphics design</li>
                               <li>Hacking and cyber security</li>
@@ -47,8 +48,28 @@
                               <li>Trading and Crypto</li>
                             </ul>
                         </div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="card w-100 my-2"><div class="card-body d-flex justify-content-around">
+                        <p class="display-5 text-white card-title text-center">Development and programming</p>
+                </div></div>
+                <div class="card w-100 my-2"><div class="card-body">
+                        <p class="display-5 text-white card-title text-center">Photoshop and graphics design</p>
+                </div></div>
+                <div class="card w-100 my-2"><div class="card-body">
+                        <p class="display-5 text-white card-title text-center">Hacking and cyber security</p>
+                </div></div>
+                <div class="card w-100 my-2"><div class="card-body">
+                        <p class="display-5 text-white card-title text-center">Reverse engineering and digital forensics</p>
+                </div></div>
+                <div class="card w-100 my-2"><div class="card-body">
+                        <p class="display-5 text-white card-title text-center">Trading and Crypto</p>
+                </div></div>
+
+
+
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col">
@@ -70,7 +91,6 @@
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">The Binding Of Isaac</h4>
                                     <p class="mb-0 text-white-50">You can't talk about roguelikes without bringing up our boy isaac.</p>
-                                </div>
                             </div>
                         </div>
                     </div>
