added an empty games page

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     </div>
                 </div>
             </div>
+        <a class="btn btn-primary mt-5 w-100" href="/games.html">See More</a>
         </section>
         <!-- Signup-->
         <section class="signup-section" id="signup">
