more features and bug fixes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
     </head>
     <body id="page-top">
         <header class="masthead">
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-                <div class="d-flex justify-content-center">
+            <div class="container-fluid px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0">SassyWooCoo</h1>
+                        <h1 class="display-4 mx-auto my-0">SassyWooCoo</h1>
                         <button class="btn btn-primary my-5" id="#like">Let's go</button>
                     </div>
-                </div>
             </div>
         </header>
         
@@ -37,35 +35,27 @@
                     </div>
                     <div >
                         <div>
-                            <p class="lead mb-0">Oh I'm just the IT guy. From graphics design to digital forensics. I'm very nerdy when it comes to technology.</p>
+                            <p class="lead mb-0 text-center">Oh I'm just the IT guy. From graphics design to digital forensics. I'm very nerdy when it comes to technology.</p>
                         <p class="display-4 text-center mt-4">My Skills</p><hr>
-                        <div class="row">
-                            <ul class="col lead">
-                              <li>Development and programming</li>
-                              <li>Photoshop and graphics design</li>
-                              <li>Hacking and cyber security</li>
-                              <li>Reverse engineering and digital forensics</li>
-                              <li>Trading and Crypto</li>
-                            </ul>
-                        </div>
+
                         </div>
                     </div>
                 </div>
 
                 <div class="card w-100 my-2"><div class="card-body d-flex justify-content-around">
-                        <p class="display-5 text-white card-title text-center">Development and programming</p>
+                        <p class="display-6 text-white card-title text-center"> 👨‍💻 Development and programming 👨‍💻</p>
                 </div></div>
                 <div class="card w-100 my-2"><div class="card-body">
-                        <p class="display-5 text-white card-title text-center">Photoshop and graphics design</p>
+                        <p class="display-6 text-white card-title text-center">🎨 Photoshop and graphics design 🎨</p>
                 </div></div>
                 <div class="card w-100 my-2"><div class="card-body">
-                        <p class="display-5 text-white card-title text-center">Hacking and cyber security</p>
+                        <p class="display-6 text-white card-title text-center">🕵️‍♂️ Hacking and cyber security 🕵️‍♂️</p>
                 </div></div>
                 <div class="card w-100 my-2"><div class="card-body">
-                        <p class="display-5 text-white card-title text-center">Reverse engineering and digital forensics</p>
+                        <p class="display-6 text-white card-title text-center">🔍 Reverse engineering and digital forensics 🔍</p>
                 </div></div>
                 <div class="card w-100 my-2"><div class="card-body">
-                        <p class="display-5 text-white card-title text-center">Trading and Crypto</p>
+                        <p class="display-6 text-white card-title text-center">📈 Trading and Crypto 📈</p>
                 </div></div>
 
 
@@ -73,11 +63,9 @@
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col">
-                        <div class="text-center ">
-                            <p class="display-4">Game On</p>
+                            <p class="display-4 mt-5 text-center">Game On</p>
                               <hr>
-                            <p class="lead mb-0">Welcome to my website where I write about the newest games I try and what I like about them. I'm mainly into roguelikes and single player games in general so if that sounds cool to you then you're in the right place.</p>
-                        </div>
+                            <p class="lead mb-0 text-center">Welcome to my website where I write about the newest games I try and what I like about them. I'm mainly into roguelikes and single player games in general so if that sounds cool to you then you're in the right place.</p>
                     </div>
                 </div>
                 <!-- Project One Row-->
@@ -109,8 +97,31 @@
                     </div>
                 </div>
             </div>
-        <a class="btn btn-primary mt-5 w-100" href="/games.html">See More</a>
+        <a class="btn btn-primary mt-5 w-100" href="/games/">See More</a>
         </section>
+
+        <section class="projects-section bg-dark" id="projects">
+            <div class="container px-4 px-lg-5">
+                <p class="gx-0 mb-4 mb-lg-5 align-items-center display-4 mt-5 text-center">My Recent blogs</p><hr>
+                <!-- Project One Row-->
+                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center games">
+                    <div class="col-lg-6">
+                        <img class="img-fluid display-4 text-end" src="nothing" alt="nothing"/></div>
+                    <div class="col-lg-6">
+                        <div class="text-center h-100 game">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4>Nothing yet</h4>
+                                    <p class="mb-0 text-white-50">It's really empty in here.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <a class="btn btn-primary mt-5 w-100" href="/blogs/">See More</a>
+        </section>
+
+
         <!-- Signup-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
