more features and bug fixes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="masthead">
             <div class="container-fluid px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                     <div class="text-center">
-                        <h1 class="display-4 mx-auto my-0">SassyWooCoo</h1>
+                        <h1 class="display-5 my-0">SassyWooCoo</h1>
                         <button class="btn btn-primary my-5" id="#like">Let's go</button>
                     </div>
             </div>
