--- a/friends.html
+++ b/friends.html
@@ -72,6 +72,14 @@
                         <p class="lead text-white">"okokokokokokokokok"</p>
                     </div>
                 </div>
+                <div class="row bg-primary rounded-3 py-2 my-4" id="qden">
+                    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/400494688_1549294745883355_2221982942041716240_n.jpg?stp=dst-jpg_s600x600&_nc_cat=109&ccb=1-7&_nc_sid=0024fc&_nc_ohc=tjvrMp2EyKIQ7kNvgGE2VRh&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QEimST5RcGydFqGS8-c5lgAzFEbODFMOOMZkEW4bkqF3Q&oe=66EABCFA" class="col-sm-4 w-35 rounded-2">
+                    <div class="col-8">
+                        <h5 class="display-4 text-white">Qden</h5>
+                        <p class="lead text-white">"I walk slowly, but I never walk backward."</p>
+                    </div>
+                </div>
+
         </section>
 
     <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; SassyWooCoo 2024</div></footer>
