--- a/friends.html
+++ b/friends.html
@@ -72,6 +72,13 @@
                         <p class="lead text-white">"okokokokokokokokok"</p>
                     </div>
                 </div>
+                <div class="row bg-primary rounded-3 py-2 my-4" id="noah">
+                    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/454431389_1658271094747442_5958245816903508232_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=0024fc&_nc_ohc=FDeYfDS-bfsQ7kNvgHIiDt5&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QE4EJZWqm-s3e_Iz5FHxmsS34JEa5YAeOKmBHy9oHjDjw&oe=66EB04F7" class="col-sm-4 w-35 rounded-2">
+                    <div class="col-8">
+                        <h5 class="display-4 text-white">Noah</h5>
+                        <p class="lead text-white">"When u feel down just loom up at the sky and think of it as u flying like an angel."</p>
+                    </div>
+                </div>
                 <div class="row bg-primary rounded-3 py-2 my-4" id="qden">
                     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/400494688_1549294745883355_2221982942041716240_n.jpg?stp=dst-jpg_s600x600&_nc_cat=109&ccb=1-7&_nc_sid=0024fc&_nc_ohc=tjvrMp2EyKIQ7kNvgGE2VRh&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QEimST5RcGydFqGS8-c5lgAzFEbODFMOOMZkEW4bkqF3Q&oe=66EABCFA" class="col-sm-4 w-35 rounded-2">
                     <div class="col-8">
@@ -79,6 +86,14 @@
                         <p class="lead text-white">"I walk slowly, but I never walk backward."</p>
                     </div>
                 </div>
+                <div class="row bg-primary rounded-3 py-2 my-4" id="ella">
+                    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/454678876_921962836357306_6034893471118891380_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=0024fc&_nc_ohc=nZxE4xpYMgkQ7kNvgFMAW5T&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QHvvgtbcmwHsAJzpxFms_ka1Myx2kwY2qvrm44LjXFLbg&oe=66EB1F95" class="col-sm-4 w-35 rounded-2">
+                    <div class="col-8">
+                        <h5 class="display-4 text-white">Ella</h5>
+                        <p class="lead text-white">"I wish I could disappear and start over somewhere new."</p>
+                    </div>
+                </div>
+
 
         </section>
 
